--- a/assets/css/2-modules/_hero.sass
+++ b/assets/css/2-modules/_hero.sass
@@ -8,7 +8,7 @@ section.hero
     padding-top: 25px
   .jumbotron
     height: 85vh
-    background: url('/assets/images/jumbotron-bg.jpg')
+    background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('/assets/images/story-bridge.jpg')
     background-size: cover
     h1
       margin-top: 30vh
