--- a/assets/css/2-modules/_hero.sass
+++ b/assets/css/2-modules/_hero.sass
@@ -4,15 +4,19 @@ section.hero
     position: absolute
     bottom: 0
     right: 0
-    height: 75vh
+    width: 50%
+    min-width: 330px
+    height: auto
     padding-top: 25px
   .jumbotron
     height: 85vh
-    background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('/assets/images/story-bridge-small.jpg')
+    background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('/assets/images/story-bridge-large.jpg')
     background-size: cover
     h1
       margin-top: 30vh
       color: $color-six
+      @media (max-width: 456px)
+        margin-top: 120px
     p
       color: $color-six
     .btn-contact
