--- a/assets/css/2-modules/_menu.sass
+++ b/assets/css/2-modules/_menu.sass
@@ -32,6 +32,9 @@ nav.navbar.navbar-default
     font-family: 'roboto', sans-serif
     color: $color-six
     transition: all 0.3s ease-in-out
+    @media (max-width: 420px)
+      font-size: 2.75em
+      margin-top: 0
     span.highlight
       color: $color-one
       font-family: 'Open Sans', sans-serif
