--- a/assets/css/2-modules/_hero.sass
+++ b/assets/css/2-modules/_hero.sass
@@ -8,6 +8,9 @@ section.hero
     min-width: 330px
     height: auto
     padding-top: 25px
+    @media (min-width: 1400px)
+      width: auto
+      height: 75vh
   .jumbotron
     height: 85vh
     background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('/assets/images/story-bridge-large.jpg')
