--- a/assets/css/2-modules/_hero.sass
+++ b/assets/css/2-modules/_hero.sass
@@ -15,6 +15,7 @@ section.hero
     height: 85vh
     background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('/assets/images/story-bridge-large.jpg')
     background-size: cover
+    margin-bottom: 0
     h1
       margin-top: 30vh
       color: $color-six
