--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -38,13 +38,13 @@ a:hover, a:focus
 // Selection colors (easy to forget)
 
 ::selection
-  background: $color-two
+  background: $color-one
 
 img::selection
   background: transparent
 
 body
-  -webkit-tap-highlight-color: $color-two
+  -webkit-tap-highlight-color: $color-one
 
 
 
