--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,8 @@
 
   <script src="/assets/js/jquery-3.1.1.min.js"></script>
   <script src="/assets/js/bootstrap.min.js"></script>
+  <script src="/assets/js/plugins.js"></script>
+  <script src="/assets/js/main.js"></script>
 </body>
 
 </html>
