--- a/_includes/cta1.html
+++ b/_includes/cta1.html
@@ -1,1 +1,1 @@
-<section class="cta-one"><div class="container text-center"><a href="mailto:aaron.christopherb@gmail.com"><h1>How much is your house worth?</h1></a></div></section>
+<section class="cta-one"><div class="container text-center"><a href="mailto:aaron.christopherb@gmail.com"><h1>How much is your property worth?</h1></a></div></section>
