--- a/_pugfiles/cta1.pug
+++ b/_pugfiles/cta1.pug
@@ -1,4 +1,4 @@
 section.cta-one
   .container.text-center
     a(href="mailto:aaron.christopherb@gmail.com")
-      h1 How much is your house worth?
+      h1 How much is your property worth?
