--- a/_pugfiles/menu-pages.pug
+++ b/_pugfiles/menu-pages.pug
@@ -1,5 +1,5 @@
-nav.navbar.navbar-default
-  .container-fluid
+nav.navbar.navbar-default.navbar-pages
+  .container
     // Brand and toggle get grouped for better mobile display
     .navbar-header
       button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1', aria-expanded='false')
@@ -13,7 +13,7 @@ nav.navbar.navbar-default
 
     // Collect the nav links, forms, and other content for toggling
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
-      ul.nav.navbar-nav
+      ul.nav.navbar-nav.navbar-right
         | {% assign sorted_pages = site.pages | sort:"order" %}
         | {% for p in sorted_pages %}
         | {% if page.url == p.url %}
