--- a/_pugfiles/testimonials.pug
+++ b/_pugfiles/testimonials.pug
@@ -6,11 +6,23 @@ section.testimonials
       .testimonials-slider
         ul
           li
-            blockquote Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-              small John Doe
+            blockquote I am impressed with Aaron Brown in my dealings with him.  I have never met him before in person but his helpfulness, promptness and enthusiasm comes across our telephone conversation as if we are just having a face to face conversation. I am an investor from Sydney and  Aaron is very knowledgeable of the Brisbane City rental market and have provided me with much insight into the residential market there to make me feel more comfortable in putting my property in his hands.  It is also the personal touch that makes him an exception.  Kudos to you Aaron Brown!
+              small Albert K
           li
-            blockquote Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-              small John Doe
+            blockquote Aaron has been friendly and efficient.  He communicates effectively and quickly and follows through with results.  Thanks!
+              small David Fryatt
           li
-            blockquote Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-              small John Doe
+            blockquote Working with Aaron Brown was fantastic. I didn't originally sign with Aaron due to exclusive access within the development we bought in, but he was still following up & making more contact than the agent who was meant to be looking after us. Aaron was a breeze & we couldn't be happier with our decision.
+              small Beau Allen
+          li
+            blockquote We highly recommend Aaron as a property manager.We have been very impressed with the professionalism and friendliness experienced.Aaron has been extremely helpful making us feel relaxed and confident in his abilities.Within one week of listing our property on the rental market, Aaron found us a fantastic tenant, who met all our requirements. Aaron's professionalism certainly sets a standard that many other real estate agents could aspire to.
+              small Felicity B
+          li
+            blockquote Aaron was great to deal with. Helpful in every way. Looking forward to working with him over the coming years.
+              small Anthony Nash
+          li
+            blockquote Aaron had helped me with renting out my apartment in the CBD. He has been on top of things and kept me well informed. Although it has taken a while to rent since the market is not at its peak, but I'm very happy with the service.
+             small Carrie Cen
+          li
+            blockquote Agent Aaron Brown was lovely to deal with, great real estate
+              small El Jay
