--- a/assets/css/2-modules/_hero-area.sass
+++ b/assets/css/2-modules/_hero-area.sass
@@ -1,6 +1,7 @@
 #hero-area
   background: url('/assets/images/hero-bg.jpg') no-repeat 50%
   background-size: cover
+  background-position: center center
   background-attachment: fixed
   padding: 230px 0
   color: #fff
@@ -9,7 +10,7 @@
   &:before
     content: ''
     z-index: 9
-    background: rgba(255, 255, 255, 0.7)
+    background: rgba(255, 255, 255, 0.6)
     position: absolute
     top: 0
     left: 0
