Fixed mobile hero

--- a/assets/css/2-modules/_hero-area.sass
+++ b/assets/css/2-modules/_hero-area.sass
@@ -19,6 +19,10 @@
   .block
     position: relative
     z-index: 999
+  .cd-words-wrapper
+    b
+      text-align: center
+      white-space: normal
   h1
     font-size: 40px
     line-height: 50px
