added features content

--- a/_pugfiles/features.pug
+++ b/_pugfiles/features.pug
@@ -11,47 +11,47 @@ section#feature
         .media.wow.fadeInUp.animated(data-wow-duration='500ms', data-wow-delay='300ms')
           .media-left
             .icon
-              i.ion-ios-flask-outline
+              i.ion-android-checkbox-outline
           .media-body
-            h4.media-heading Media heading
-            p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, sint.
+            h4.media-heading Great Quality
+            p A.K.B Cleaning Co provides only the best quality cleaning services
       .col-md-4.col-lg-4.col-xs-12
         .media.wow.fadeInDown.animated(data-wow-duration='500ms', data-wow-delay='600ms')
           .media-left
             .icon
-              i.ion-ios-lightbulb-outline
+              i.ion-android-happy
           .media-body
-            h4.media-heading Well documented.
-            p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, sint.
+            h4.media-heading Friendly Staff
+            p We know you will enjoy when our friendly staff visit.
       .col-md-4.col-lg-4.col-xs-12
         .media.wow.fadeInDown.animated(data-wow-duration='500ms', data-wow-delay='900ms')
           .media-left
             .icon
-              i.ion-ios-lightbulb-outline
+              i.ion-android-home
           .media-body
-            h4.media-heading Well documented.
-            p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, sint.
+            h4.media-heading Home Packages
+            p With our industry parteners we can take care of all your home maintance.
       .col-md-4.col-lg-4.col-xs-12
         .media.wow.fadeInDown.animated(data-wow-duration='500ms', data-wow-delay='1200ms')
           .media-left
             .icon
-              i.ion-ios-americanfootball-outline
+              i.ion-ios-alarm-outline
           .media-body
-            h4.media-heading Free updates
-            p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, sint.
+            h4.media-heading Timely
+            p We make sure our cleaners are at your house on time every time.
       .col-md-4.col-lg-4.col-xs-12
         .media.wow.fadeInDown.animated(data-wow-duration='500ms', data-wow-delay='1500ms')
           .media-left
             .icon
-              i.ion-ios-keypad-outline
+              i.ion-social-usd-outline
           .media-body
-            h4.media-heading Solid Support
-            p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, sint.
+            h4.media-heading Affordable
+            p Our pricing is positioned to get you the best clean for the most reasonable price.
       .col-md-4.col-lg-4.col-xs-12
         .media.wow.fadeInDown.animated(data-wow-duration='500ms', data-wow-delay='1800ms')
           .media-left
             .icon
-              i.ion-ios-barcode-outline
+              i.ion-thumbsup
           .media-body
-            h4.media-heading Simple Installation
-            p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, sint.
+            h4.media-heading Happy Customers
+            p With all our happy customers you know you're in good hands.
