Finished Home Page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="no-js">
+
 <head>
   <!-- Basic Page Needs
   ================================================== -->
@@ -22,7 +23,41 @@
 
 <body>
 
-  {{  content  }}
+  {{ content }}
+
+  <footer id="footer">
+    <div class="container">
+      <div class="col-md-8">
+        <p class="copyright">Copyright: <span>2017</span> . Design and Developed by <a href="https://www.jasonmdesign.com">Jason M Design</a></p>
+      </div>
+      <div class="col-md-4">
+        <!-- Social Media -->
+        <ul class="social">
+          <li>
+            <a href="http://wwww.fb.com/akbcleaningco" class="Facebook">
+              <i class="ion-social-facebook"></i>
+            </a>
+          </li>
+          <li>
+            <a href="http://wwww.twitter.com/akbcleaningco" class="Twitter">
+              <i class="ion-social-twitter"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="Linkedin">
+              <i class="ion-social-linkedin"></i>
+            </a>
+          </li>
+          <li>
+            <a href="http://wwww.fb.com/akbcleaningco" class="Google Plus">
+              <i class="ion-social-googleplus"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+  <!-- /#footer -->
 
   <!-- Template Javascript Files
   ================================================== -->
