--- a/_pugfiles/home-about.pug
+++ b/_pugfiles/home-about.pug
@@ -6,9 +6,9 @@ section#about
           h2
             | ABOUT our service
           p
-            | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            | Our services are carefully considered and crafted to ensure that you as our customer get the best possible clean for the money you pay. The whole process has been streamlined so that your house, whether you own your own rental property or are looking for someone to help you clean up for that inspection. We've got your back.
           p
-            | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            | Our hight standards, industry leading practices and friendly staff will ensure that you will be looking forward to the next time you get your house cleaned.
       .col-md-6.col-sm-6
         .block.wow.fadeInRight(data-wow-delay='.3s', data-wow-duration='500ms')
           img(src='/assets/images/living-room.jpg', alt='')
