--- a/_pugfiles/testimonials.pug
+++ b/_pugfiles/testimonials.pug
@@ -1,27 +1,27 @@
-section#clients
+section#testimonials
   .container
     .row
       .col-md-12
         h2.subtitle.text-center.wow.fadeInDown(data-wow-duration='500ms', data-wow-delay='.3s') Our Happy Clinets
         p.subtitle-des.text-center.wow.fadeInDown(data-wow-duration='500ms', data-wow-delay='.5s') See what other like you have to say about us.
-        #clients-logo.owl-carousel
+        #testimonials-img.owl-carousel
           div
-            img(src='images/clients/logo-1.jpg', alt='')
+            img.img-circle(src='/assets/images/testimonials/house1.jpg', alt='')
           div
-            img(src='images/clients/logo-2.jpg', alt='')
+            img.img-circle(src='/assets/images/testimonials/house1.jpg', alt='')
           div
-            img(src='images/clients/logo-3.jpg', alt='')
+            img.img-circle(src='/assets/images/testimonials/house1.jpg', alt='')
           div
-            img(src='images/clients/logo-4.jpg', alt='')
+            img.img-circle(src='/assets/images/testimonials/house1.jpg', alt='')
           div
-            img(src='images/clients/logo-5.jpg', alt='')
+            img.img-circle(src='/assets/images/testimonials/house1.jpg', alt='')
           div
-            img(src='images/clients/logo-1.jpg', alt='')
+            img.img-circle(src='/assets/images/testimonials/house1.jpg', alt='')
           div
-            img(src='images/clients/logo-2.jpg', alt='')
+            img.img-circle(src='/assets/images/testimonials/house1.jpg', alt='')
           div
-            img(src='images/clients/logo-3.jpg', alt='')
+            img.img-circle(src='/assets/images/testimonials/house1.jpg', alt='')
           div
-            img(src='images/clients/logo-4.jpg', alt='')
+            img.img-circle(src='/assets/images/testimonials/house1.jpg', alt='')
           div
-            img(src='images/clients/logo-5.jpg', alt='')
+            img.img-circle(src='/assets/images/testimonials/house1.jpg', alt='')
