added services, updated contact email

--- a/_pugfiles/contact.pug
+++ b/_pugfiles/contact.pug
@@ -7,7 +7,7 @@ section#contact-section
           p.subtitle-des.wow.fadeInDown(data-wow-duration='500ms', data-wow-delay='.5s')
             | Got a question for us? or maybe you just want to say hi, or thanks for the great service we gave. Get in touch with us below.
           .contact-form
-            form#contact-form(method='post', action='https://formspree.io/aaron.christopherb@gmail.com', role='form')
+            form#contact-form(method='post', action='https://formspree.io/akb.cleaningco@gmail.com.au', role='form')
               .form-group.wow.fadeInDown(data-wow-duration='500ms', data-wow-delay='.6s')
                 input#name.form-control(type='text', placeholder='Your Name', name='name')
               .form-group.wow.fadeInDown(data-wow-duration='500ms', data-wow-delay='.8s')
