--- a/assets/css/2-modules/_footer.sass
+++ b/assets/css/2-modules/_footer.sass
@@ -17,3 +17,10 @@
       a
         font-size: 22px
         color: $color-one
+#copyright
+  a:hover, nav .menu li a:hover
+    color: #e4e4e4 !important
+  a
+    text-decoration: none
+    &:hover
+      text-decoration: none
