--- a/_pugfiles/pricing-table.pug
+++ b/_pugfiles/pricing-table.pug
@@ -1,9 +1,15 @@
 section#pricing-table.row.flat
+  .section-header
+    .container
+      .row
+        .col-md-12
+          .block
+            h2 Cleaning Packages
   .container
-    .col-lg-3.col-md-3.col-xs-6
+    .col-lg-5.col-md-5.col-xs-6.col-md-offset-1.col-lg-offset-1
       ul.plan.plan1
         li.plan-name
-          | Basic
+          h2 Basic Clean
         li.plan-price
           strong $29
           |  / month
@@ -23,11 +29,12 @@ section#pricing-table.row.flat
           strong Forum
           |  Support
         li.plan-action
-          a.btn.btn-lg(href='#') Signup
-    .col-lg-3.col-md-3.col-xs-6
-      ul.plan.plan2.featured
+          a.btn.btn-lg(href='#') 
+            h3 book now
+    .col-lg-5.col-md-5.col-xs-6
+      ul.plan.plan2
         li.plan-name
-          | Standard
+          h2 Bond Clean
         li.plan-price
           strong $39
           |  / month
@@ -47,52 +54,5 @@ section#pricing-table.row.flat
           strong Forum
           |  Support
         li.plan-action
-          a.btn.btn-lg(href='#') Signup
-    .col-lg-3.col-md-3.col-xs-6
-      ul.plan.plan3
-        li.plan-name
-          | Advanced
-        li.plan-price
-          strong $199
-          |  / month
-        li
-          strong 50GB
-          |  Storage
-        li
-          strong 8GB
-          |  RAM
-        li
-          strong 1024GB
-          |  Bandwidth
-        li
-          strong Unlimited
-          |  Email Address
-        li
-          strong Forum
-          |  Support
-        li.plan-action
-          a.btn.btn-lg(href='#') Signup
-    .col-lg-3.col-md-3.col-xs-6
-      ul.plan.plan4
-        li.plan-name
-          | Mighty
-        li.plan-price
-          strong $999
-          |  / month
-        li
-          strong 50GB
-          |  Storage
-        li
-          strong 8GB
-          |  RAM
-        li
-          strong 1024GB
-          |  Bandwidth
-        li
-          strong Unlimited
-          |  Email Address
-        li
-          strong Forum
-          |  Support
-        li.plan-action
-          a.btn.btn-lg(href='#') Signup
+          a.btn.btn-lg(href='#') 
+            h3 book now
