--- a/_pugfiles/pricing-table.pug
+++ b/_pugfiles/pricing-table.pug
@@ -4,9 +4,9 @@ section#pricing-table.row.flat
       .row
         .col-md-12
           .block
-            h2 Cleaning Packages
+            h2.wow.fadeInUp.animated(data-wow-delay='.3s', data-wow-duration='500ms') Cleaning Packages
   .container
-    .col-lg-5.col-md-5.col-xs-6.col-md-offset-1.col-lg-offset-1
+    .col-lg-5.col-md-5.col-xs-6.col-md-offset-1.col-lg-offset-1.wow.fadeInUp.animated(data-wow-delay='.3s', data-wow-duration='500ms')
       ul.plan.plan1
         li.plan-name
           h2 Basic Clean
@@ -31,7 +31,7 @@ section#pricing-table.row.flat
         li.plan-action
           a.btn.btn-lg(href='#') 
             h3 book now
-    .col-lg-5.col-md-5.col-xs-6
+    .col-lg-5.col-md-5.col-xs-6.wow.fadeInUp.animated(data-wow-delay='.5s', data-wow-duration='500ms')
       ul.plan.plan2
         li.plan-name
           h2 Bond Clean
