--- a/_pugfiles/services.pug
+++ b/_pugfiles/services.pug
@@ -3,34 +3,34 @@ section#service-page.pages.service-page
     .row
       .col-md-6
         .block
-          h2.subtitle.wow.fadeInUp.animated(data-wow-delay='.3s', data-wow-duration='500ms') What We Love To Do
+          h2.subtitle.wow.fadeInUp.animated(data-wow-delay='.3s', data-wow-duration='500ms') Your Cleaning Specialists
           p.subtitle-des.wow.fadeInUp.animated(data-wow-delay='.5s', data-wow-duration='500ms')
-            | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis porro recusandae non quibusdam iure adipisci.
+            | A.K.B Cleaning Co specalizes in helping you get your home ready for new tennants or cleaning up for inspections
           .row.service-parts
             .col-md-6
               .block.wow.fadeInUp.animated(data-wow-duration='400ms', data-wow-delay='600ms')
-                i.ion-ios-paper-outline
-                h4 BRANDING
+                i.ion-android-checkbox-outline
+                h4 Bond Cleaning
                 p
-                  | Veritatis eligendi, dignissimos. Porta fermentum mus aute pulvinar earum minus platea massa feugiat rutrum urna facilisi ipsameum.
+                  | Get your house back to the standards you expect it to be kept in. Bond Cleans can get your house ready for showing new tennants or potencial buyers.
             .col-md-6
               .block.wow.fadeInUp.animated(data-wow-duration='400ms', data-wow-delay='800ms')
-                i.ion-ios-pint-outline
-                h4 DESIGN
+                i.ion-android-contacts
+                h4 Need a Hand
                 p
-                  | Veritatis eligendi, dignissimos. Porta fermentum mus aute pulvinar earum minus platea massa feugiat rutrum urna facilisi ipsameum.
+                  | Getting ready for that important inspection, or just need a hand getting on top of your household cleaning. We can help in both these situations.
             .col-md-6
               .block.wow.fadeInUp.animated(data-wow-duration='400ms', data-wow-delay='1s')
-                i.ion-ios-paper-outline
-                h4 DEVELOPMENT
+                i.ion-ios-alarm-outline
+                h4 Out of Time
                 p
-                  | Veritatis eligendi, dignissimos. Porta fermentum mus aute pulvinar earum minus platea massa feugiat rutrum urna facilisi ipsameum.
+                  | Time is a precious resoure, and for some it just doesn't make sense to spend hours cleaning when you can hire us, get a better job done and in half the time.
             .col-md-6
               .block.wow.fadeInUp.animated(data-wow-duration='400ms', data-wow-delay='1.1s')
                 i.ion-ios-paper-outline
-                h4 THEMEING
+                h4 Cleaning
                 p
-                  | Veritatis eligendi, dignissimos. Porta fermentum mus aute pulvinar earum minus platea massa feugiat rutrum urna facilisi ipsameum.
+                  | Got a scenario that we havent talked about above? Get in touch with us and we can work out a custom package with you.
       .col-md-6
         .block
-          img.img-responsive(src='images/team.jpg', alt='')
+          img.img-responsive(src='/assets/images/kitchen.jpg', alt='')
