--- a/assets/css/2-modules/_about.sass
+++ b/assets/css/2-modules/_about.sass
@@ -15,3 +15,27 @@
       margin-bottom: 35px
     img
       max-width: 100%
+
+.company-description
+  margin-top: 80px
+  .block
+    h3
+      margin-top: 0
+    p
+      color: #727272
+
+.about-feature
+  margin-top: 50px
+  .block
+    color: #fff
+    width: 33.33%
+    padding: 5%
+    float: left
+    p
+      font-weight: 300
+  .about-feature-1
+    background: $color-one
+  .about-feature-2
+    background: lighten($color-one, 3%)
+  .about-feature-3
+    background: lighten($color-one, 5%)
