added booking form

--- a/_pugfiles/home-cta.pug
+++ b/_pugfiles/home-cta.pug
@@ -9,4 +9,4 @@ section#call-to-action
               | Get in touch with us today to recieve a no obligation
               br
               | free quote, and discover what an enjoyable experience for you having someone help clean your house can be.
-            a.btn.btn-default.btn-contact.wow.fadeInDown(href='/contact', data-wow-delay='.7s', data-wow-duration='500ms') Contact Us
+            a.btn.btn-default.btn-contact.wow.fadeInDown(href='/booking-form', data-wow-delay='.7s', data-wow-duration='500ms') Contact Us
