--- a/_pugfiles/main-slider.pug
+++ b/_pugfiles/main-slider.pug
@@ -19,4 +19,4 @@ section#hero-area
             | With professional and friendly staff we can take care of any cleaning need.
             br
             |  We are the best at what we do.
-          a.btn-lines.dark.light.wow.fadeInUp.animated.smooth-scroll.btn.btn-default.btn-green(data-wow-delay='.9s', href='/contact') get in touch
+          a.btn-lines.dark.light.wow.fadeInUp.animated.smooth-scroll.btn.btn-default.btn-green(data-wow-delay='.9s', href='/booking-form') get in touch
