added client testimonials

--- a/_pugfiles/testimonials.pug
+++ b/_pugfiles/testimonials.pug
@@ -4,24 +4,44 @@ section#testimonials
       .col-md-12
         h2.subtitle.text-center.wow.fadeInDown(data-wow-duration='500ms', data-wow-delay='.3s') Our Happy Clinets
         p.subtitle-des.text-center.wow.fadeInDown(data-wow-duration='500ms', data-wow-delay='.5s') See what other like you have to say about us.
-        #testimonials-img.owl-carousel
+        #testimonials-img.owl-carousel.text-center
           div
             img.img-circle(src='/assets/images/testimonials/house1.jpg', alt='')
+            h4 Client Name
+            p A brief testimonial describing how awesome the service was.
           div
             img.img-circle(src='/assets/images/testimonials/house1.jpg', alt='')
+            h4 Client Name
+            p A brief testimonial describing how awesome the service was.
           div
             img.img-circle(src='/assets/images/testimonials/house1.jpg', alt='')
+            h4 Client Name
+            p A brief testimonial describing how awesome the service was.
           div
             img.img-circle(src='/assets/images/testimonials/house1.jpg', alt='')
+            h4 Client Name
+            p A brief testimonial describing how awesome the service was.
           div
             img.img-circle(src='/assets/images/testimonials/house1.jpg', alt='')
+            h4 Client Name
+            p A brief testimonial describing how awesome the service was.
           div
             img.img-circle(src='/assets/images/testimonials/house1.jpg', alt='')
+            h4 Client Name
+            p A brief testimonial describing how awesome the service was.
           div
             img.img-circle(src='/assets/images/testimonials/house1.jpg', alt='')
+            h4 Client Name
+            p A brief testimonial describing how awesome the service was.
           div
             img.img-circle(src='/assets/images/testimonials/house1.jpg', alt='')
+            h4 Client Name
+            p A brief testimonial describing how awesome the service was.
           div
             img.img-circle(src='/assets/images/testimonials/house1.jpg', alt='')
+            h4 Client Name
+            p A brief testimonial describing how awesome the service was.
           div
             img.img-circle(src='/assets/images/testimonials/house1.jpg', alt='')
+            h4 Client Name
+            p A brief testimonial describing how awesome the service was.
