--- a/_pugfiles/recommended-partners.pug
+++ b/_pugfiles/recommended-partners.pug
@@ -1,7 +1,7 @@
 section#team
   .container
     .row
-      h2.subtitle.text-center Meet The Team
+      h2.subtitle.text-center Rcommended Partners
       .col-md-4
         .team-member.wow.fadeInLeft(data-wow-duration='500ms', data-wow-delay='.3s')
           .team-img
