--- a/_pugfiles/404-error.pug
+++ b/_pugfiles/404-error.pug
@@ -6,4 +6,4 @@ section.moduler.wrapper_404
           h1.wow.fadeInUp.animated.cd-headline.slide(data-wow-delay='.4s') 404
           h2.wow.fadeInUp.animated(data-wow-delay='.6s') Opps! You have some problems
           p.wow.fadeInUp.animated(data-wow-delay='.9s') The page you are looking for was moved, removed, renamed or might never existed.
-          a.btn.btn-dafault.btn-home.wow.fadeInUp.animated(href='index.html', data-wow-delay='1.1s') Go Home
+          a.btn.btn-dafault.btn-home.wow.fadeInUp.animated(href='/', data-wow-delay='1.1s') Go Home
