updates slider and about content

--- a/_pugfiles/main-slider.pug
+++ b/_pugfiles/main-slider.pug
@@ -6,12 +6,13 @@ section#hero-area
           // Slider
           section.cd-intro
             h1.wow.fadeInUp.animated.cd-headline.slide(data-wow-delay='.4s')
-              span A.K.B Cleaning Co is dedicated to helping you
+              span A.K.B Cleaning Co can help you with
               br
               span.cd-words-wrapper
-                b.is-visible Tidy up for inspections
-                b complete bond cleans 
-                b routine maintenance
+                b.is-visible Tidying up for inspections
+                b General surface cleaning
+                b complete bond cleaning
+                b routine maintenance cleaning
                 b Cleaning before you sell
           // cd-intro
           // /.slider
