--- a/_pugfiles/home-about.pug
+++ b/_pugfiles/home-about.pug
@@ -6,9 +6,9 @@ section#about
           h2
             | ABOUT our service
           p
-            | Our services are carefully considered and crafted to ensure that you as our customer get the best possible clean for the money you pay. The whole process has been streamlined so that your house, whether you own your own rental property or are looking for someone to help you clean up for that inspection. We've got your back.
+            | Our services are carefully considered and crafted to ensure that you, as our customer, get the best possible clean money can buy. The whole process has been streamlined so that our cleaning expertise can shine through your property, in the best possible time and at the best possible standard. After years of witnessing cleaning companies in the realestate industry, we know what is expected and how your cleaning should be done. Our unique structure, allows us to comfortably quote jobs at the best price. Our company, though small, is geared to service our clients in the best possible way. Take advantage of who we are and what we stand for.
           p
-            | Our hight standards, industry leading practices and friendly staff will ensure that you will be looking forward to the next time you get your house cleaned.
+            | Through our streamlined processes, friendly staff, years of cleaning experience, and a relatively small company set-up, we have the time, energy and effort to perform expert cleans at the best prices in the best possible time frame. We have the time for you!
       .col-md-6.col-sm-6
         .block.wow.fadeInRight(data-wow-delay='.3s', data-wow-duration='500ms')
           img(src='/assets/images/living-room.jpg', alt='')
