removed testimonials adjusted footer

--- a/_pugfiles/features.pug
+++ b/_pugfiles/features.pug
@@ -3,9 +3,9 @@ section#feature
     .section-heading
       h1.title.wow.fadeInDown(data-wow-delay='.3s') Why Choose Us?
       p.wow.fadeInDown(data-wow-delay='.5s')
-        | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
+        | We know how valuable your asset is and know how to bring it up to its true potential.
         br
-        |  quasi dolores numquam dolor vero ex, tempora commodi repellendus quod laborum.
+        |  Our prices are competitive and and our service is second to none.
     .row
       .col-md-4.col-lg-4.col-xs-12
         .media.wow.fadeInUp.animated(data-wow-duration='500ms', data-wow-delay='300ms')
