--- a/_pugfiles/about-content.pug
+++ b/_pugfiles/about-content.pug
@@ -14,6 +14,7 @@ section.company-description
 section.about-feature.clearfix
   .container-fluid
     .row
+      // Garden and Lawn Maintance add in
       .block.about-feature-1.wow.fadeInDown(data-wow-duration='500ms', data-wow-delay='.3s')
         h2
           | Why Choose Us
