--- a/_pugfiles/pricing-table.pug
+++ b/_pugfiles/pricing-table.pug
@@ -29,8 +29,8 @@ section#pricing-table.row.flat
           strong Forum
           |  Support
         li.plan-action
-          a.btn.btn-lg(href='/booing-form') 
-            h3 book now
+          a.btn.btn-lg(href='/contact') 
+            h3 Request Free Quote
     .col-lg-5.col-md-5.col-xs-6.wow.fadeInUp.animated(data-wow-delay='.5s', data-wow-duration='500ms')
       ul.plan.plan2
         li.plan-name
@@ -54,5 +54,5 @@ section#pricing-table.row.flat
           strong Forum
           |  Support
         li.plan-action
-          a.btn.btn-lg(href='/booking-form') 
-            h3 book now
+          a.btn.btn-lg(href='/contact') 
+            h3 Request Free Quote
