--- a/_pugfiles/about-content.pug
+++ b/_pugfiles/about-content.pug
@@ -7,9 +7,9 @@ section.company-description
         .block
           h3.subtitle.wow.fadeInUp(data-wow-delay='.3s', data-wow-duration='500ms') Why We are Different
           p.wow.fadeInUp(data-wow-delay='.5s', data-wow-duration='500ms')
-            | Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequun. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            | AKB Cleaning Co, work closely with reality agents and others within the industry se we understand exactly what you need. Whether it be a simple spring clean to an all out bond clean, we will get your house or rental property right back to the standard that you expect it to be at. With experience in the industry we focus on the things that are most important to you as a home owner, realestate investor, or renter. This ensures that you get the best possible value for the ammount you pay. We don't waste time in bring your home up to speed and thats a pomise.
           p.wow.fadeInUp(data-wow-delay='.7s', data-wow-duration='500ms')
-            | Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
+            | On top of this all our staff are carefully selected, excelently trained, and amazingly friendly and professional. You know you are in good hands.
 
 section.about-feature.clearfix
   .container-fluid
@@ -19,14 +19,14 @@ section.about-feature.clearfix
         h2
           | Why Choose Us
         p
-          | Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
+          | With great prices, flexiable availability, and exceptional quality of work. The real question here is why not choose us? We are confident you won't find a better service at a better price.
       .block.about-feature-2.wow.fadeInDown(data-wow-duration='500ms', data-wow-delay='.5s')
         h2.item_title
           | What You Get
         p
-          | Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
+          | Our committment to our customers is simple and we promise that what you get will be. The best clean for your house, at a convienient time that works for you, and finally a the best service.
       .block.about-feature-3.wow.fadeInDown(data-wow-duration='500ms', data-wow-delay='.7s')
         h2.item_title
-          | Meet The Energy
+          | Join The Team
         p
-          | Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
+          | At AKB Cleaning Co we are always looking for hard working employees with an eye for care and detail. If you think you have what it takes get in touch with us through our contact page. Make sure to include your resume and relevent certifigates / education.
