Added Match Height

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,8 +58,9 @@
   <!-- owl carouserl js -->
   <script src="/assets/js/owl.carousel.min.js"></script>
   <!-- bootstrap js -->
-
   <script src="/assets/js/bootstrap.min.js"></script>
+  <!-- Match Height -->
+  <script src="/assets/js/jquery-match-height.js"></script>
   <!-- wow js -->
   <script src="/assets/js/wow.min.js"></script>
   <!-- slider js -->
