Updated Pricing Table

--- a/_pugfiles/pricing-table.pug
+++ b/_pugfiles/pricing-table.pug
@@ -11,23 +11,23 @@ section#pricing-table.row.flat
         li.plan-name
           h2 Basic Clean
         li.plan-price
-          strong $29
-          |  / month
+          strong $189.00
         li
-          strong 5GB
-          |  Storage
+          | Window Cleaning (internal and external)
         li
-          strong 1GB
-          |  RAM
+          | Carpet Cleaning
         li
-          strong 400GB
-          |  Bandwidth
+          | Kitchen Clean
         li
-          strong 10
-          |  Email Address
+          | Bathroom Clean
         li
-          strong Forum
-          |  Support
+          | Bedroom Clean
+        li
+          strike Oven Clean
+        li
+          strike Deep Cleaning
+        li
+          strike Grout Cleaning
         li.plan-action
           a.btn.btn-lg(href='/contact') 
             h3 Request Free Quote
@@ -36,23 +36,23 @@ section#pricing-table.row.flat
         li.plan-name
           h2 Bond Clean
         li.plan-price
-          strong $39
-          |  / month
+          strong $339.00
+                li
+          | Window Cleaning (internal and external)
         li
-          strong 5GB
-          |  Storage
+          | Carpet Cleaning
         li
-          strong 1GB
-          |  RAM
+          | Kitchen Clean
         li
-          strong 400GB
-          |  Bandwidth
+          | Bathroom Clean
         li
-          strong 10
-          |  Email Address
+          | Bedroom Clean
         li
-          strong Forum
-          |  Support
+          | Oven Clean
+        li
+          | Deep Cleaning
+        li
+          | Grout Cleaning
         li.plan-action
           a.btn.btn-lg(href='/contact') 
             h3 Request Free Quote
