--- a/_pugfiles/contact.pug
+++ b/_pugfiles/contact.pug
@@ -52,6 +52,6 @@ section#contact-section
         .phone.wow.fadeInLeft(data-wow-duration='500ms', data-wow-delay='.9s')
           i.ion-ios-telephone-outline
           p
-            a(href="tel:123456") +07 3029 1542
+            | Phone
             br
-            a(href="tel:123456") +04 325 698 42
+            a(href="tel:0423793880") 0423 793 880
