Changed Logo and Wording

--- a/_pugfiles/header.pug
+++ b/_pugfiles/header.pug
@@ -15,7 +15,7 @@ header#top-bar.navbar-fixed-top.animated-header
       // logo
       .navbar-brand
         a(href='/')
-          img(src='/assets/images/logo.png', alt='A.K.B Cleaning Co Logo')
+          img(src='/assets/images/logo-new.png', alt='A.K.B Cleaning Co Logo')
       // /logo
     // main menu
     nav.collapse.navbar-collapse.navbar-right(role='navigation')
