--- a/_pugfiles/pricing-table.pug
+++ b/_pugfiles/pricing-table.pug
@@ -9,8 +9,9 @@ section#pricing-table.row.flat
     .col-lg-5.col-md-5.col-xs-6.col-md-offset-1.col-lg-offset-1.wow.fadeInUp.animated(data-wow-delay='.3s', data-wow-duration='500ms')
       ul.plan.plan1
         li.plan-name
-          h2 Basic Clean
+          h2 General / Sparkle Clean
         li.plan-price
+          | From
           strong $189.00
         li
           | Window Cleaning (internal and external)
@@ -34,10 +35,11 @@ section#pricing-table.row.flat
     .col-lg-5.col-md-5.col-xs-6.wow.fadeInUp.animated(data-wow-delay='.5s', data-wow-duration='500ms')
       ul.plan.plan2
         li.plan-name
-          h2 Bond Clean
+          h2 Total Bond Clean
         li.plan-price
+          | From
           strong $339.00
-                li
+        li
           | Window Cleaning (internal and external)
         li
           | Carpet Cleaning
