--- a/_pugfiles/contact.pug
+++ b/_pugfiles/contact.pug
@@ -5,7 +5,7 @@ section#contact-section
         .block
           h2.subtitle.wow.fadeInDown(data-wow-duration='500ms', data-wow-delay='.3s') Contact Us
           p.subtitle-des.wow.fadeInDown(data-wow-duration='500ms', data-wow-delay='.5s')
-            | Got a question for us? or maybe you just want to say hi, or thanks for the great service we gave. Get in touch with us below.
+            | Got a question for us, want to say "hello", or would like to give feedback? Get in touch with us below.
           .contact-form
             form#contact-form(method='post', action='https://formspree.io/akb.cleaningco@gmail.com.au', role='form')
               .form-group.wow.fadeInDown(data-wow-duration='500ms', data-wow-delay='.6s')
@@ -23,7 +23,7 @@ section#contact-section
         .map-area
           h2.subtitle.wow.fadeInDown(data-wow-duration='500ms', data-wow-delay='.3s') Our Area
           p.subtitle-des.wow.fadeInDown(data-wow-duration='500ms', data-wow-delay='.5s')
-            | A.K.B Cleaning Co is based in loganholme and service the greater Brisbane region
+            | A.K.B Cleaning Co is based in Loganholme and services the Greater Brisbane Region of South East Queensland.
           .map
             iframe(src='https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d56550.75480935996!2d153.15303740447624!3d-27.64240713573371!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sau!4v1490873799811', width='100%', height='400', frameborder='0', style='border:0', allowfullscreen='')
     .row.address-details
