--- a/_pugfiles/pricing-table.pug
+++ b/_pugfiles/pricing-table.pug
@@ -8,55 +8,57 @@ section#pricing-table.row.flat
   .container
     .row
       .col-lg-5.col-md-5.col-xs-6.col-md-offset-1.col-lg-offset-1.wow.fadeInUp.animated(data-wow-delay='.3s', data-wow-duration='500ms')
-        ul.plan.plan1
-          li.plan-name
-            h2 Basic Clean
-          li.plan-price
-            strong $29
-            |  / month
-          li
-            strong 5GB
-            |  Storage
-          li
-            strong 1GB
-            |  RAM
-          li
-            strong 400GB
-            |  Bandwidth
-          li
-            strong 10
-            |  Email Address
-          li
-            strong Forum
-            |  Support
-          li.plan-action
-            a.btn.btn-lg(href='/contact') 
-              h3 Request Free Quote
-      .col-lg-5.col-md-5.col-xs-6.wow.fadeInUp.animated(data-wow-delay='.5s', data-wow-duration='500ms')
-        ul.plan.plan2
-          li.plan-name
-            h2 Bond Clean
-          li.plan-price
-            strong $39
-            |  / month
-          li
-            strong 5GB
-            |  Storage
-          li
-            strong 1GB
-            |  RAM
-          li
-            strong 400GB
-            |  Bandwidth
-          li
-            strong 10
-            |  Email Address
-          li
-            strong Forum
-            |  Support
-          li.plan-action
-            a.btn.btn-lg(href='/contact') 
-              h3 Request Free Quote
+      ul.plan.plan1
+        li.plan-name
+          h2 General / Sparkle Clean
+        li.plan-price
+          | From
+          strong $189.00
+        li
+          | Window Cleaning (internal and external)
+        li
+          | Carpet Cleaning
+        li
+          | Kitchen Clean
+        li
+          | Bathroom Clean
+        li
+          | Bedroom Clean
+        li
+          strike Oven Clean
+        li
+          strike Deep Cleaning
+        li
+          strike Grout Cleaning
+        li.plan-action
+          a.btn.btn-lg(href='/contact') 
+            h3 Request Free Quote
+    .col-lg-5.col-md-5.col-xs-6.wow.fadeInUp.animated(data-wow-delay='.5s', data-wow-duration='500ms')
+      ul.plan.plan2
+        li.plan-name
+          h2 Total Bond Clean
+        li.plan-price
+          | From
+          strong $339.00
+        li
+          | Window Cleaning (internal and external)
+        li
+          | Carpet Cleaning
+        li
+          | Kitchen Clean
+        li
+          | Bathroom Clean
+        li
+          | Bedroom Clean
+        li
+          | Oven Clean
+        li
+          | Deep Cleaning
+        li
+          | Grout Cleaning
+        li.plan-action
+          a.btn.btn-lg(href='/contact') 
+            h3 Request Free Quote
     .row
       .col-lg-5.col-md-5.col-xs-6.col-md-offset-1.col-lg-offset-1.wow.fadeInUp.animated(data-wow-delay='.3s', data-wow-duration='500ms')
         ul.plan.plan1
