--- a/_pugfiles/pricing-table.pug
+++ b/_pugfiles/pricing-table.pug
@@ -32,7 +32,7 @@ section#pricing-table.row.flat
             strike Grout Cleaning
           li.plan-action
             a.btn.btn-lg(href='/contact') 
-              h3 Request Free Quote
+              h3 Request Quote
       .col-lg-5.col-md-5.col-xs-12.wow.fadeInUp.animated(data-wow-delay='.5s', data-wow-duration='500ms')
         ul.plan.plan2
           li.plan-name
@@ -58,7 +58,7 @@ section#pricing-table.row.flat
             | Grout Cleaning
           li.plan-action
             a.btn.btn-lg(href='/contact') 
-              h3 Request Free Quote
+              h3 Request Quote
     .row
       .col-lg-5.col-md-5.col-xs-12.col-md-offset-1.col-lg-offset-1.wow.fadeInUp.animated(data-wow-delay='.3s', data-wow-duration='500ms')
         ul.plan.plan1
