--- a/assets/css/2-modules/_menu.sass
+++ b/assets/css/2-modules/_menu.sass
@@ -49,6 +49,8 @@ header#top-bar
   .main-menu li
     > a
       color: #444
+      @media only screen and (max-width: 767px)
+        color: #fff
     position: relative
     a
       font-size: 14px
