--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -1,6 +1,7 @@
 //	Typography
 body
   font-family: 'Roboto', sans-serif
+  overflow-x: hidden
 
 h1, h2, h3, h4, h5, h6
   font-family: 'Roboto Condensed', sans-serif
