--- a/_pugfiles/main-slider.pug
+++ b/_pugfiles/main-slider.pug
@@ -6,7 +6,7 @@ section#hero-area
           // Slider
           section.cd-intro
             h1.wow.fadeInUp.animated.cd-headline.slide(data-wow-delay='.4s')
-              span A.K.B Cleaning Co can help you with
+              span A.K.B Cleaning Co
               br
               span.cd-words-wrapper
                 b.is-visible Tidying up for inspections
