--- a/_pugfiles/home-about.pug
+++ b/_pugfiles/home-about.pug
@@ -6,9 +6,9 @@ section#about
           h2
             | ABOUT our service
           p
-            | Our services are carefully considered and crafted to ensure that you, as our customer, get the best possible clean money can buy. The whole process has been streamlined so that our cleaning expertise can shine through your property, in the best possible time and at the best possible standard. After years of witnessing cleaning companies in the realestate industry, we know what is expected and how your cleaning should be done. Our unique structure, allows us to comfortably quote jobs at the best price. Our company, though small, is geared to service our clients in the best possible way. Take advantage of who we are and what we stand for.
+            | Our services are carefully considered and crafted to ensure that you, the customer, receive the best possible clean money can buy. Our processes have been streamlined so that our cleaning expertise shines through our work, providing you with cleaning of the highest standard. After many years of observing other cleaning companies, and the quality of work that is performed, we can safely say that we know how your cleaning is to be done. This unique advantage, allows us to comfortably quote jobs at the best price. Our company, is geared to service our clients in the best possible way. Take advantage of who we are and what we stand for.
           p
-            | Through our streamlined processes, friendly staff, years of cleaning experience, and a relatively small company set-up, we have the time, energy and effort to perform expert cleans at the best prices in the best possible time frame. We have the time for you!
+            | Through our streamlined processes, friendly staff and years of cleaning experience, we have the time, energy and effort to perform expert cleans. We have the time for you!
       .col-md-6.col-sm-6
         .block.wow.fadeInRight(data-wow-delay='.3s', data-wow-duration='500ms')
           img(src='/assets/images/living-room.jpg', alt='')
