Changed About Section Picture

--- a/_pugfiles/about-content.pug
+++ b/_pugfiles/about-content.pug
@@ -2,7 +2,7 @@ section.company-description
   .container
     .row
       .col-md-6.wow.fadeInLeft(data-wow-delay='.3s')
-        img.img-responsive(src='/assets/images/business-card.jpg', alt='')
+        img.img-responsive(src='/assets/images/about-section-logo.png', alt='')
       .col-md-6
         .block
           h3.subtitle.wow.fadeInUp(data-wow-delay='.3s', data-wow-duration='500ms') Why We are Different
