--- a/_pugfiles/about-content.pug
+++ b/_pugfiles/about-content.pug
@@ -7,9 +7,9 @@ section.company-description
         .block
           h3.subtitle.wow.fadeInUp(data-wow-delay='.3s', data-wow-duration='500ms') Why We are Different
           p.wow.fadeInUp(data-wow-delay='.5s', data-wow-duration='500ms')
-            | AKB Cleaning Co, work closely with reality agents and others within the industry se we understand exactly what you need. Whether it be a simple spring clean to an all out bond clean, we will get your house or rental property right back to the standard that you expect it to be at. With experience in the industry we focus on the things that are most important to you as a home owner, realestate investor, or tenant. This ensures that you get the best possible value for the amount you pay. We don't waste time in bring your home up to speed and thats a pomise.
+            | At AKB Cleaning Co, we work with a number of clients and partners ranging from carpet cleaning specialists, property maintenance specialists, tenants, landlords, home owners, and realestate agents. Whether it be a general clean, an indepth bond clean or a tailored job to suit your needs, we will ensure your property will achieve the highest standard of cleanliness. With majority of our experience gained in the realestate industry, our services are affordable and second to none.
           p.wow.fadeInUp(data-wow-delay='.7s', data-wow-duration='500ms')
-            | On top of this all our staff are carefully selected and trained so you know you are in good hands..
+            | With carefully selected and trained staff, you know you are in good hands.
 
 section.about-feature.clearfix
   .container-fluid
