--- a/_pugfiles/pricing-table.pug
+++ b/_pugfiles/pricing-table.pug
@@ -13,7 +13,7 @@ section#pricing-table.row.flat
             h2 General / Sparkle Clean
           li.plan-price
             | From
-            strong $189.00
+            strong $189.00 (3 Bedroom)
           li
             | Window Cleaning (internal and external)
           li
@@ -39,7 +39,7 @@ section#pricing-table.row.flat
             h2 Total Bond Clean
           li.plan-price
             | From
-            strong $339.00
+            strong $339.00 (3 Bedroom)
           li
             | Window Cleaning (internal and external)
           li
@@ -65,7 +65,7 @@ section#pricing-table.row.flat
           li.plan-name
             h2 Custom Package
           li.plan-price
-            strong AT COST
+            strong AT COST (Any Size)
           li
             | Please enter request on our contact page
           li.plan-action
