--- a/_pugfiles/pricing-table.pug
+++ b/_pugfiles/pricing-table.pug
@@ -21,7 +21,7 @@ section#pricing-table.row.flat
           li
             | Bathroom Clean
           li
-            | Bedroom Clean
+            | Bedroom(s) Clean
           li
             strike Oven Clean
           li
@@ -45,7 +45,7 @@ section#pricing-table.row.flat
           li
             | Bathroom Clean
           li
-            | Bedroom Clean
+            | Bedroom(s) Clean
           li
             | Oven Clean
           li
